--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "memory": 1024,
       "maxDuration": 10
     },
-    "api/**/*.js": {
+    "api/*.js": {
       "memory": 512,
       "maxDuration": 5
     }
