Fix game drift issues, add Supabase/Edge Config support, and improve leaderboard API
- Fixed element drift issues (screen shake, canvas resize, tilt controls)
- Fixed audio path bug (background music)
- Fixed score extraction bug for leaderboard submission
- Added Supabase backend support with improved unique constraint handling
- Added Edge Config backend support (with warnings about limitations)
- Enhanced pause screen and tab visibility handling
- Improved game balance and error handling
- Added comprehensive setup guides (Supabase, Edge Config, Vercel Postgres)
- Added CHANGELOG.md documenting all changes

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": ">=18.x"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.5.1"
+    "@vercel/postgres": "^0.5.1",
+    "@vercel/edge-config": "^1.0.0"
   },
   "scripts": {
     "dev": "vercel dev",
